@@ -1,6 +1,21 @@
+/*
+ * Copyright 2016 qyh.me
+ * 
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ * 
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ * 
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
 package me.qyh.blog.plugin.lr;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.Map;
 
 import javax.servlet.http.HttpServletRequest;
@@ -28,6 +43,7 @@ import me.qyh.blog.core.vo.JsonResult;
 import me.qyh.blog.template.entity.Page;
 import me.qyh.blog.template.service.TemplateService;
 import me.qyh.blog.template.vo.ExportPage;
+import me.qyh.blog.template.vo.ExportPages;
 import me.qyh.blog.web.security.CaptchaValidator;
 
 public class LoginRestorePluginHandler implements PluginHandler {
@@ -106,7 +122,9 @@ public class LoginRestorePluginHandler implements PluginHandler {
 		loginPage.setName("login");
 		exportPage.setPage(loginPage);
 
-		templateService.importPage(null, Arrays.asList(exportPage));
+		ExportPages exportPages = new ExportPages();
+		exportPages.setPages(List.of(exportPage));
+		templateService.importPage(exportPages);
 
 		attemptLogger.remove(Environment.getIP());
 		return new JsonResult(true, new Message("login.restore.success", "恢复成功"));
