@@ -15,8 +15,6 @@
  */
 package me.qyh.blog.template.render.thymeleaf.dialect;
 
-import java.util.Arrays;
-import java.util.HashSet;
 import java.util.Set;
 
 import org.springframework.context.ApplicationContext;
@@ -37,13 +35,13 @@ public class TemplateDialect extends AbstractProcessorDialect {
 
 	@Override
 	public Set<IProcessor> getProcessors(final String dialectPrefix) {
-		return new HashSet<>(Arrays.asList(new DataTagProcessor(dialectPrefix, applicationContext),
+		return Set.of(new DataTagProcessor(dialectPrefix, applicationContext),
 				new FragmentTagProcessor(dialectPrefix, applicationContext),
 				new LockTagProcessor(dialectPrefix, applicationContext),
 				new RedirectTagProcessor(dialectPrefix, applicationContext), new PrivateTagProcessor(dialectPrefix),
 				new MediaTypeTagProcessor(dialectPrefix), new PeriodTagProcessor(dialectPrefix),
 				new LockedTagProcessor(dialectPrefix), new UnlockedTagProcessor(dialectPrefix),
-				new MarkdownModelProcessor(dialectPrefix, applicationContext)));
+				new MarkdownModelProcessor(dialectPrefix, applicationContext));
 	}
 
 }
